Prevent user emails being cut off
Make heading break on whitespace - it means if the combination
of name and email address is too long for the line, email address
will go underneath and be more visible.

If email address too big for the allotted space, it will break onto
the next line and all of it will be visible.

--- a/app/assets/stylesheets/views/users.scss
+++ b/app/assets/stylesheets/views/users.scss
@@ -13,10 +13,8 @@ $item-top-padding: govuk-spacing(3);
     &-heading {
 
       padding-right: govuk-spacing(3);
-      white-space: nowrap;
       overflow: hidden;
-      text-overflow: ellipsis;
-      color: $secondary-text-colour;  // So the ellipsis is grey
+      overflow-wrap: break-word;
 
       .heading-small {
         color: $black;
